﻿v1.0.8

Options
* New: The options/mini-map button is now more buttony

Rez Master
* Change: Adjusted how Cool down begin messages are filtered.
* Change: Once a rez has completed its cool down, Rez Master will re-sort the list placing Mages at the top.

French Translations
* Updated!

Russian Translations
* Updates and Fixes
----
v1.0.7

System
* Change: Re-ordered the initialization system.
* New: On start-up the KBM event system now fires Player Join events if you're already in a group (for both /reloadui, and log-in).

Rez Master
* New: Enabling RezMaster (from a disabled state) will re-inspect your raid and retrieve fresh Rez data. Useful before a pull if anything seems amiss.
* Fixed: Errors sometimes triggering on leaving a dungeon.
* Fixed: Enable/Disable option now works.
----
v1.0.6

System
* Fixed: Version notifications where only triggering from guild members. Now works with raid members.

Unit Tracker
* Change: Improved tracking of non-seen units. This should improve CPU performance and accuracy of auxiliary tracking.
* Change: Unseen units are now correctly placed in the Idle queue until activity stops or they die.
* Change: Improved engine so that conditional checks are grouped and ordered better. CPU performance boost.
* Fixed: Removed units where not ungrouping correctly.

New! Rez Master
* New: Changing roles and logging in will check and begin to register available combat rezes.
* New: Joining a raid, and reloading UI will request an update for all raid party members who may have a combat rez.
* New: Timers for combat rezes display the appropriate icon.
* New: Timers for combat rezes will display a ready state when off cool down.
* New: Timers will attempt to order the shortest cool down combat rezes at the top.
* New: Settings will be saved for position the Rez Master anchor.
* New: Added options to the main menu for Enabling/Disabling, moving and resizing the timer bars.

Tank-Swap